# PYHTTPCHAT-CLIENT

./: README.md  __init__.py  pychatclient.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  encryptionservice.py  messagehandler.py  pychatclient.py  secondinit.py
submodules/: messagehandler.py  secondinit.py
