[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client-pyhttpchat"
version = "0.0.1a"
description = "The client for EnvIr0n's pyhttpchatserver"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["HTPP", "chat", "chatclient"]

[project.authors]
name = "EnvIr0n"
email = "envir0n@proton.me"

[project.maintainers]
name = "EnvIr0n"
email = "envir0n@proton.me"

[project.classifiers]
Development Status = "3 - Alpha"
Intended Audience = "Developers"
Topic = "Software Development :: Chat Tools"
License = "OSI Approved :: GNU General Public License v3 (GPLv3)"
Programming Language = "Python :: 3.7"

[project.urls]
Homepage = "https://envir0n.github.io/pyhttpchat/client"
Bug Reports = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"
Funding = "none"
Say Thanks! = "none"
Source = "https://github.com/Env-Ir0n/PYHTTPCHAT-CLIENT"

[project.scripts]
pychat-run-client = "pychatclient:main"
